--- a/cgb-solutions-frontend/package.json
+++ b/cgb-solutions-frontend/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
